# NVIDIA___ncore

./: .bazelrc  .cog.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MODULE.bazel  pyproject.toml
.github/actions/setup-bazel/: action.yml
.github/workflows/: ci.yml
bazel/format/: ruff_isort.sh
docs/: index.rst
docs/conversions/: index.rst
docs/conversions/argoverse2/: argoverse2.rst
docs/conversions/kitti/: kitti.rst
docs/conversions/nuscenes/: nuscenes.rst
docs/data/: formats.rst  sensor_models.rst  storage_and_access.rst
docs/tools/: data_vis.rst  lidar_model_eval.rst  ncore_sequence_meta.rst  ncore_vis.rst
ncore/: BUILD.bazel
ncore/data/: __init__.py
ncore/impl/common/: transformations.py  transformations_test.py
ncore/impl/data/: BUILD.bazel  stores.py  stores_test.py  types.py  types_test.py  util.py  util_test.py
ncore/impl/data/v4/: compat.py  compat_test.py  components.py  components_test.py
ncore/impl/sensors/: BUILD.bazel  camera.py  camera_test.py  rectification.py  rectification_test.py
ncore/sensors/: BUILD.bazel  __init__.py
tools/: BUILD.bazel  cli.py  colormaps.py  ncore_evaluate_lidar_model.py  ncore_export_camera.py  ncore_export_colored_pc.py  ncore_project_pc_to_img.py
tools/data_converter/: README.md  structured_lidar_model.py  structured_lidar_model_test.py
tools/data_converter/argoverse2/: BUILD.bazel  NOTICE  README.md  converter.py  converter_test.py  main.py  utils.py  utils_test.py
tools/data_converter/colmap/: converter.py
tools/data_converter/kitti/: BUILD.bazel  NOTICE  README.md  converter.py  converter_test.py  main.py  utils.py
tools/data_converter/nuscenes/: BUILD.bazel  NOTICE  README.md  converter.py  converter_test.py  main.py  utils.py
tools/data_converter/pai/: converter.py  data_provider.py
tools/data_converter/waymo/: converter.py  deps.py
tools/ncore_vis/: BUILD.bazel  cli.py  data_loader.py  server.py
tools/ncore_vis/components/: camera.py  cuboids.py  lidar.py  point_clouds.py  radar.py  trajectory.py
